--- a/jobs/haproxy/templates/haproxy.config.erb
+++ b/jobs/haproxy/templates/haproxy.config.erb
@@ -32,29 +32,28 @@ frontend http-in
     bind :80
     default_backend http-routers
 
-<% if p("ha_proxy.internal_only_domains").size > 0 %>
+  <% if p("ha_proxy.internal_only_domains").size > 0 %>
     acl public src 0.0.0.0/0
-<% p("ha_proxy.internal_only_domains").each do |domain| %>
+    <% p("ha_proxy.internal_only_domains").each do |domain| %>
     acl internal hdr(Host) -m sub <%= domain %>
-<% end %>
+    <% end %>
     http-request deny if internal public
-<% end %>
+  <% end %>
 
-<% p('ha_proxy.routed_backend_servers').keys.each do |prefix| %>
-<% prefix_hash = (Digest::SHA256.hexdigest prefix.to_s)[0..5] %>
+  <% p('ha_proxy.routed_backend_servers').keys.each do |prefix| %>
+    <% prefix_hash = (Digest::SHA256.hexdigest prefix.to_s)[0..5] %>
     acl routed_backend_<%= prefix_hash %> path_beg <%= prefix %>
     use_backend http-routed-backend-<%= prefix_hash %> if routed_backend_<%= prefix_hash %>
-<% end %>
+  <% end %>
     acl xfp_exists hdr_cnt(X-Forwarded-Proto) gt 0
     reqadd X-Forwarded-Proto:\ http if ! xfp_exists
-<% end %>
 
-<% if p("ha_proxy.https_redirect_all") == true %>
+  <% if p("ha_proxy.https_redirect_all") == true %>
     redirect scheme https code 301 if !{ ssl_fc }
-<% end %>
-<% unless p("ha_proxy.https_redirect_all") == true %>
+  <% else %>
     acl ssl_redirect hdr(host),lower,map_end(/var/vcap/jobs/haproxy/config/ssl_redirect.map,false) -m str true
     redirect scheme https code 301 if ssl_redirect
+  <% end %>
 <% end %>
 
 <%# HTTPS Frontend %>
@@ -65,19 +64,19 @@ frontend https-in
     bind :443 ssl crt /var/vcap/jobs/haproxy/config/cert.pem no-sslv3 ciphers <%= p("ha_proxy.ssl_ciphers") %>
     default_backend http-routers
 
-<% if p("ha_proxy.internal_only_domains").size > 0 %>
+  <% if p("ha_proxy.internal_only_domains").size > 0 %>
     acl public src 0.0.0.0/0
-<% p("ha_proxy.internal_only_domains").each do |domain| %>
+    <% p("ha_proxy.internal_only_domains").each do |domain| %>
     acl internal hdr(Host) -m sub <%= domain %>
-<% end %>
+    <% end %>
     http-request deny if internal public
-<% end %>
+  <% end %>
 
-<% p('ha_proxy.routed_backend_servers').keys.each do |prefix| %>
-<% prefix_hash = (Digest::SHA256.hexdigest prefix.to_s)[0..5] %>
+  <% p('ha_proxy.routed_backend_servers').keys.each do |prefix| %>
+    <% prefix_hash = (Digest::SHA256.hexdigest prefix.to_s)[0..5] %>
   acl routed_backend_<%= prefix_hash %> path_beg <%= prefix %>
   use_backend http-routed-backend-<%= prefix_hash %> if routed_backend_<%= prefix_hash %>
-<% end %>
+  <% end %>
     reqadd X-Forwarded-Proto:\ https
 <% end %>
 
@@ -89,24 +88,24 @@ frontend wss-in
     bind :4443 ssl crt /var/vcap/jobs/haproxy/config/cert.pem no-sslv3 ciphers <%= p("ha_proxy.ssl_ciphers") %>
     default_backend http-routers
 
-<% if p("ha_proxy.internal_only_domains").size > 0 %>
+  <% if p("ha_proxy.internal_only_domains").size > 0 %>
     acl public src 0.0.0.0/0
-<% p("ha_proxy.internal_only_domains").each do |domain| %>
+    <% p("ha_proxy.internal_only_domains").each do |domain| %>
     acl internal hdr(Host) -m sub <%= domain %>
-<% end %>
+    <% end %>
     http-request deny if internal public
-<% end %>
+  <% end %>
 
-<% p('ha_proxy.routed_backend_servers').keys.each do |prefix| %>
-<% prefix_hash = (Digest::SHA256.hexdigest prefix.to_s)[0..5] %>
+  <% p('ha_proxy.routed_backend_servers').keys.each do |prefix| %>
+    <% prefix_hash = (Digest::SHA256.hexdigest prefix.to_s)[0..5] %>
   acl routed_backend_<%= prefix_hash %> path_beg <%= prefix %>
   use_backend http-routed-backend-<%= prefix_hash %> if routed_backend_<%= prefix_hash %>
-<% end %>
+  <% end %>
     reqadd X-Forwarded-Proto:\ https
+<% end %>
 
 <%# Default Backend %>
 
-<% end %>
 backend http-routers
     mode http
     balance roundrobin
@@ -121,7 +120,7 @@ backend http-routers
 <%# Routed Backends %>
 
 <% p('ha_proxy.routed_backend_servers').each do |prefix, data| %>
-<% prefix_hash = (Digest::SHA256.hexdigest prefix.to_s)[0..5] %>
+  <% prefix_hash = (Digest::SHA256.hexdigest prefix.to_s)[0..5] %>
 backend http-routed-backend-<%= prefix_hash %>
     mode http
     balance roundrobin
